--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "indefinite": "^2.3.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0",
-    "thesaurus": "^0.0.1"
+    "react-scripts": "3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
